--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "obsidian_parser"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 marko = "^2.0.2"
+watchdog = "^3.0.0"
 
 
 [build-system]
