Path Expansion Occurs at Settigns Parsing

--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
   "vaultRoot": "~/Documents/ethans-vault/",
   "vaultDirectory": "~/Documents/ethans-vault/ethans-blog/",
   "outDirectory": "~/projects/ethans-blog/client/src/content/obsidian/",
-  "imageDirectory": "attachments/",
+  "imageDirectory": "/attachments/",
   "linkBase": "/blog/",
   "assetBase": "/assets/obsidian/",
   "assetOutput": "~/projects/ethans-blog/client/public/assets/obsidian/"
